dods-lambda is refactored
